unpackaged/main/default/objects/SLCA2__CA_HoverFields__c/SLCA2__CA_HoverFields__c.object-meta.xml
<CustomObject>
    <description>list of fields for event hover</description>
    <label>CA_HoverFields</label>
    <nameField>
        <label>CA_HoverFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_HoverFieldsPlural</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>