unpackaged/main/default/objects/SLCA2__CA_HoverFields__c/fields/SLCA2__calendarId__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__calendarId__c</fullName>
    <label>CA_Calendar</label>
    <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
    <relationshipLabel>CA_HoverFieldsPlural</relationshipLabel>
    <relationshipName>CA_HoverFieldsPlural</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>