unpackaged/main/default/objects/SLCA2__CA_HoverFields__c/fields/SLCA2__fieldLabel__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldLabel__c</fullName>
    <label>fieldLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>