unpackaged/main/default/objects/SLCA2__CA_HoverFields__c/fields/SLCA2__fieldObject__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldObject__c</fullName>
    <description>Related object</description>
    <label>fieldObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>